tests/good/06_recursion_1.ris
int fibo(int n):
    let int res = 1;
    if (n > 2):
        res = fibo(n - 1) + fibo(n - 2);
    endif;
    return res;

void main():
    println fibo(12);
    return;