tests/bad/bad-plus-type.ris
void main():
    print 2 + "foo";
    return;